--- a/introspection/terms.adoc
+++ b/introspection/terms.adoc
@@ -5,6 +5,9 @@ preceding area :: the portion of the input buffer that has already been parsed.
 
 following area :: the portion of the input buffer that has not yet been parsed.
 
+the offset in the input buffer ::
+  the number of characters in the _preceding area_ of the input buffer.
+
 the current input source ::
   the input source
   whose interpretation has been started most recently and is not yet complete
