--- a/terms.adoc
+++ b/terms.adoc
@@ -16,7 +16,8 @@ This specification assumes only one base path at a time,
 associated with the input source.
 
 The underlying concept is similar to the Base URI concept,
-see https://www.rfc-editor.org/rfc/rfc3986.html#section-5.1[RFC 3986 / Establishing a Base URI].
+see https://www.rfc-editor.org/rfc/rfc3986.html#section-5.1[RFC 3986
+(Uniform Resource Identifier, 5.1. Establishing a Base URI)].
 
 In a general case, a base path is an https://en.wikipedia.org/wiki/Internationalized_Resource_Identifier[IRI].
 
@@ -28,8 +29,8 @@ and so the https://en.wikipedia.org/wiki/Percent-encoding[percent-encoding]
 is used for characters outside the ASCII charset.
 --
 
-If and only if the implied URI scheme of a base path is `file:`
-(see https://www.rfc-editor.org/rfc/rfc8089.html[RFC 8089: The "file" URI Scheme]),
+If and only if the implied URI scheme of a base path is `file`
+(see https://www.rfc-editor.org/rfc/rfc8089.html[RFC 8089 (The "file" URI Scheme)]),
 its "scheme" and "host" parts may be omitted.
 A consequence of this is that only the forward slash is used
 as a path segment separator when a URI scheme is omitted,
@@ -62,6 +63,7 @@ an absolute IRI or a full path in the local file system
 that is associated with the input source
 and can be obtained by a program.
 
+See also: link:./introspection/terms.adoc[introspection / terms].
 
 
 
