--- a/glossary.adoc
+++ b/glossary.adoc
@@ -49,7 +49,8 @@ The throw code `-81` may be changed.
 `( sd.path sd.base-path -- sd.path | sd.path.resolved.transient )`
 
 Place the address and length of a transient buffer
-on the stack and perform the function of `resolve-path-to`.
+on the stack and perform the function of
+link:#resolve-path-to[`resolve-path-to`].
 
 The transient buffer shall be at least 255 characters long.
 
