--- a/introspection/glossary.adoc
+++ b/introspection/glossary.adoc
@@ -238,15 +238,16 @@ using `xchar+` or `x-size` as the following:
 == `source-path`
 `( -- sd.path )`
 
-_sd.path_ is a character string that is an
-https://en.wikipedia.org/wiki/Internationalized_Resource_Identifier[IRI]
+_sd.path_ is a character string that is a normalized
+https://www.rfc-editor.org/rfc/rfc3987.html[IRI]
 identifying the input source or the input source kind.
  +
 _sd.path_ is valid until interpretation of this input source is complete.
 
 If and only if _sd.path_ is in the File URI scheme
 (see https://www.rfc-editor.org/rfc/rfc8089.html[RFC 8089]),
-its "scheme" and "host" parts may be omitted.
+its "scheme" and "host" parts may be omitted,
+otherwise _sd.path_ must start with an URI scheme.
 
 If _sd.path_ is in the File URI scheme,
 this path shall be acceptable to `open-file`.
@@ -267,8 +268,11 @@ Examples of correct _sd.path_ values:
 
 * `"/home/john-doe/example.fth"`
 * `"file:/home/john-doe/example.fth"`
+** (no "host" part)
 * `"file:///home/john-doe/example.fth"`
+** (the "host" part is empty)
 * `"file://localhost/home/john-doe/example.fth"`
+** (the "host" part is a special hostname `localhost`)
 * `"/Users/john-doe/example.fth"`
 * `"/c:/Users/john-doe/example.fth"`
 ** Should the variant `"c:/Users/john-doe/example.fth"` be allowed?
